# QuickVLC

./: .clang-format  .gitignore  CMakeLists.txt
.github/workflows/: build.yaml
cmake/: FindLIBVLC.cmake
config/: CompilerConfig.cmake  Dependencies.cmake  Macros.cmake  Package.cmake  ParseVersion.cmake  Platform.cmake
config/package/: QuickVLCConfig.cmake  QuickVLCCoreConfig.cmake  QuickVLCQmlConfig.cmake
config/platform/: Android.cmake  Ios.cmake  Windows.cmake
docs/: CMakeLists.txt
src/: CMakeLists.txt  config.h.in  license_template.txt
src/core/: CMakeLists.txt  abstractvideoframe.cpp  abstractvideoframe.h  abstractvideostream.cpp  abstractvideostream.h  audio.cpp  audio.h  common.cpp  common.h  core_shared_export.h  d3d11videostream.cpp  d3d11videostream.h  error.cpp  error.h  instance.cpp  instance.h  media.cpp  media.h  mediaplayer.cpp  mediaplayer.h  openglvideoframe.cpp  openglvideoframe.h  openglvideostream.cpp  openglvideostream.h  videoframe.cpp  videoframe.h  videoframepool.cpp  videoframepool.h  vlc.cpp  vlc.h
src/qml/: CMakeLists.txt  audiooutput.cpp  audiooutput.h  main.cpp  mediaplayer.cpp  mediaplayer.h  mediasource.cpp  mediasource.h  qml_shared_export.h  videooutput.cpp  videooutput.h
src/qml/rendering/: videomaterial.cpp  videomaterial.h  videomaterialshader.cpp  videomaterialshader.h  videonode.cpp  videonode.h  videotexture.cpp  videotexture.h
src/qml/rendering/shaders/: videomaterialshader.frag  videomaterialshader.vert
src/qml/video/: videostream.cpp  videostream.h
tests/: CMakeLists.txt
